# sourcerer

./: .gitignore  LICENSE  README.md
agent/: .gitignore  langgraph.json  pyproject.toml
agent/sourcerer/: __init__.py  demo.py
agent/sourcerer/langgraph/: __init__.py  agent.py  chat.py  find_fact_check.py  find_web_search.py  state.py
sourcerer_ui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.mjs  tailwind.config.ts
sourcerer_ui/src/app/: layout.tsx  page.tsx
sourcerer_ui/src/app/api/copilotkit/: route.ts
sourcerer_ui/src/components/: Main.tsx
